--- a/app/src/main/res/drawable/choose_meal_filled.xml
+++ b/app/src/main/res/drawable/choose_meal_filled.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="15dp" />
-            <solid android:color="#8BC34A" />
+            <solid android:color="#00BCD4" />
         </shape>
     </item>
 </selector>
