--- a/app/src/main/res/drawable/choose_meal_white.xml
+++ b/app/src/main/res/drawable/choose_meal_white.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="15dp" />
             <solid android:color="#FFFFFF" />
-            <stroke android:color="@color/black" android:width="0.5dp"/>
+            <stroke android:color="#00BCD4" android:width="0.5dp"/>
         </shape>
     </item>
 </selector>
