--- a/app/src/main/res/drawable/meal_info_layout.xml
+++ b/app/src/main/res/drawable/meal_info_layout.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="15dp" />
             <solid android:color="#FFFFFF" />
-            <stroke android:width="1dp"  android:color="#A2DC52" />
+            <stroke android:width="1dp"  android:color="#00BCD4" />
         </shape>
     </item>
 </selector>
