--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,41 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".SplashActivity">
 
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+
+        <ImageView
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="40dp"
             android:id="@+id/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-android:layout_marginTop="15dp"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:text="@string/app_name"
             android:textColor="#000000"
             android:textSize="40sp" />
         <ProgressBar
-            android:layout_below="@id/app_name"
+           app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/app_name"
             android:indeterminateDrawable="@drawable/progressbar_color"
             android:id="@+id/splash_pb"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
             />
 
         <androidx.cardview.widget.CardView
-            android:layout_centerInParent="true"
+            app:layout_constraintTop_toBottomOf="@+id/splash_pb"
             android:id="@+id/splash_card_view"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:elevation="18dp"
-            app:cardCornerRadius="12dp"
+            app:cardCornerRadius="15dp"
             app:cardUseCompatPadding="true">
 
             <RelativeLayout
@@ -58,5 +57,5 @@ android:layout_marginTop="15dp"
             </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
-    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
