--- a/app/src/main/res/layout/fragment_choose_meal.xml
+++ b/app/src/main/res/layout/fragment_choose_meal.xml
@@ -106,9 +106,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_marginTop="20dp"
                 android:id="@+id/history_of_recipe_rv"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/previously_searched_tv" />
 
