--- a/app/src/main/res/layout/filter_view.xml
+++ b/app/src/main/res/layout/filter_view.xml
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_choose_meal_categories_flow_view"
-        android:text="Filter"
+        android:text="@string/filter"
         android:textAllCaps="false"
         android:layout_marginHorizontal="100dp"
         android:layout_width="match_parent"
