--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,13 +31,15 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/sign_in_tv"
             android:layout_margin="20dp"
+            android:background="@drawable/transparent"
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/username_et_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bottom_line_ui"
+
+                android:background="@drawable/transparent"
                 android:hint="Username/ Email"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -48,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/username_et"
             android:layout_margin="20dp"
+            android:background="@drawable/transparent"
             app:errorEnabled="true"
             app:passwordToggleEnabled="true">
 
@@ -55,7 +58,7 @@
                 android:id="@+id/password_et_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bottom_line_ui"
+                android:background="@drawable/transparent"
                 android:hint="Password"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
