--- a/app/src/main/res/layout/filter_view.xml
+++ b/app/src/main/res/layout/filter_view.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.helper.widget.Flow
-        android:layout_marginVertical="32dp"
+        android:layout_marginVertical="90dp"
         android:id="@+id/fragment_choose_meal_categories_flow_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:layout_marginVertical="16dp"
         android:enabled="false"
-        android:background="@drawable/filter_btn"
+        android:background="@drawable/filter_btn_from_fragment"
         android:id="@+id/fragment_choose_meal_categories_filter_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/fragment_choose_meal_categories_flow_view"
         android:text="@string/filter"
         android:textAllCaps="false"
-        android:layout_marginHorizontal="100dp"
+        android:layout_marginHorizontal="60dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
