--- a/app/src/main/res/drawable/bottom_line_ui.xml
+++ b/app/src/main/res/drawable/bottom_line_ui.xml
@@ -8,7 +8,7 @@
             <stroke
                 android:width="0.5dp"
                 android:color="#5E7E32" />
-            <solid android:color="#ffffff" />
+            <solid android:color="#00FFFFFF" />
         </shape>
     </item>
 </layer-list>
