--- a/app/src/main/res/drawable/transparent.xml
+++ b/app/src/main/res/drawable/transparent.xml
@@ -7,8 +7,8 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="0.0dp"
-                android:color="#5E7E32" />
-            <solid android:color="#ffffff" />
+                android:color="#005E7E32" />
+            <solid android:color="#00FFFFFF" />
         </shape>
     </item>
 </layer-list>
